<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/editTextReviewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Review_ID"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editTextBookId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Book_ID"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editTextReviewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Reviewer_Name"/>

    <EditText
        android:id="@+id/editTextRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Rating"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Comment"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/buttonSubmitReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit_Review"
        android:layout_gravity="center_horizontal"
        android:onClick="submitReview"/>

</LinearLayout>
